Bug 1564726 Part 1 - Make BlockReflowInput::ComputeBlockAvailSpace return the result rect. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D138366