layout/generic/BlockReflowInput.h
@@ -204,11 +204,12 @@ class BlockReflowInput {
       nsIFrame* aFrame, const mozilla::LogicalRect& aFloatAvailableSpace,
       nscoord& aIStartResult, nscoord& aIEndResult) const;
 
-  // Caller must have called GetFloatAvailableSpace for the current mBCoord
-  void ComputeBlockAvailSpace(nsIFrame* aFrame,
-                              const nsFlowAreaRect& aFloatAvailableSpace,
-                              bool aBlockAvoidsFloats,
-                              mozilla::LogicalRect& aResult);
+  // Compute the amount of available space for reflowing a block frame at the
+  // current block-direction coordinate mBCoord. Caller must have called
+  // GetFloatAvailableSpace for the current mBCoord.
+  mozilla::LogicalRect ComputeBlockAvailSpace(
+      nsIFrame* aFrame, const nsFlowAreaRect& aFloatAvailableSpace,
+      bool aBlockAvoidsFloats);
 
   void RecoverStateFrom(nsLineList::iterator aLine, nscoord aDeltaBCoord);
 
